# dto/error_response_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type ErrorResponseDTO struct {
+	Status int    `json:"status"`
+	Error  string `json:"error"`
+}
