# dto/success_response_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+type SuccessResponse[T any] struct {
+	Status  int    `json:"status"`
+	Data    []T    `json:"data"`
+	Message string `json:"message"`
+}
