# dto/switch-response-dto.go
@@ -1,5 +1,0 @@
-package dto
-
-type SwitchResDTO struct {
-	Message string `json: "message"`
-}
